--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -28,6 +28,9 @@
           <button type="submit" class="btn btn-default">Submit</button>
         </form>
       </div>
+      <div class="tab-pane" id="social-logins">
+        <a href="{{ url_for('auth.facebook_login', next=url_for('auth.home')) }}">Login via Facebook</a>
+      </div>
     </div>
   </div>
 {% endblock %}
