--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -30,6 +30,7 @@
       </div>
       <div class="tab-pane" id="social-logins">
         <a href="{{ url_for('auth.facebook_login', next=url_for('auth.home')) }}">Login via Facebook</a>
+        <a href="{{ url_for('auth.google_login') }}">Login via Google</a>
       </div>
     </div>
   </div>
