--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -31,6 +31,7 @@
       <div class="tab-pane" id="social-logins">
         <a href="{{ url_for('auth.facebook_login', next=url_for('auth.home')) }}">Login via Facebook</a>
         <a href="{{ url_for('auth.google_login') }}">Login via Google</a>
+        <a href="{{ url_for('auth.twitter_login', next=url_for('auth.home')) }}">Login via Twitter</a>
       </div>
     </div>
   </div>
