--- a/my_app/templates/home.html
+++ b/my_app/templates/home.html
@@ -2,8 +2,8 @@
 
 {% block container %}
   <h1>Welcome to the Authentication Demo</h1>
-  {% if session.username %}
-    <h3>Hey {{ session.username }}!!</h3>
+  {% if current_user.is_authenticated %}
+    <h3>Hey {{ current_user.username }}!!</h3>
     <a href="{{ url_for('auth.logout') }}">Click here to logout</a>
   {% else %}
   Click here to <a href="{{ url_for('auth.login') }}">login</a> or <a href="{{ url_for('auth.register') }}">register</a>
