--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -2,14 +2,26 @@
 
 {% block container %}
   <div class="top-pad">
-    <form
-        method="POST"
-        action="{{ url_for('auth.login') }}"
-        role="form">
-      {{ form.csrf_token }}
-      <div class="form-group">{{ form.username.label }}: {{ form.username() }}</div>
-      <div class="form-group">{{ form.password.label }}: {{ form.password() }}</div>
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
+    <ul class="nav nav-tabs">
+     <li class="active"><a href="#simple-form" data-
+       toggle="tab">Old Style Login</a></li>
+     <li><a href="#social-logins" data-toggle="tab">Social Logins</a></li>
+    </ul>
+    <div class="tab-content">
+      <div class="tab-pane active" id="simple-form">
+        <form
+            method="POST"
+            action="{{ url_for('auth.login') }}"
+            role="form">
+          {{ form.csrf_token }}
+          <div class="form-group">{{ form.username.label }}: {{ form.username() }}</div>
+          <div class="form-group">{{ form.password.label }}: {{ form.password() }}</div>
+          <button type="submit" class="btn btn-default">Submit</button>
+        </form>
+      </div>
+      <div class="tab-pane" id="social-logins">
+        <a href="{{ url_for('auth.facebook_login', next=url_for('auth.home')) }}">Login via Facebook</a>
+      </div>
+    </div>
   </div>
 {% endblock %}
