--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -21,6 +21,8 @@
       </div>
       <div class="tab-pane" id="social-logins">
         <a href="{{ url_for('auth.facebook_login', next=url_for('auth.home')) }}">Login via Facebook</a>
+        <br/>
+        <a href="{{ url_for('auth.google_login', next=url_for('auth.home')) }}">Login via Google</a>
       </div>
     </div>
   </div>
