--- a/my_app/templates/login.html
+++ b/my_app/templates/login.html
@@ -23,6 +23,8 @@
         <a href="{{ url_for('auth.facebook_login', next=url_for('auth.home')) }}">Login via Facebook</a>
         <br/>
         <a href="{{ url_for('auth.google_login', next=url_for('auth.home')) }}">Login via Google</a>
+        <br/>
+        <a href="{{ url_for('auth.twitter_login', next=url_for('auth.home')) }}">Login via Twitter</a>
       </div>
     </div>
   </div>
